# Special_Subject_AI

./: .env.example  .gitignore  REORGANIZATION_PLAN.md  cach_dung.txt  main.py  pyproject.toml
data/courses/: sample_knowledge.txt
docs/: README.md
docs/analysis/: COMPARISON_RAG_FILES.md  SET_GEMINI_KEY.md  SPLIT_INDEX_QUERY_ANALYSIS.md
docs/fixes/: CUDA_OOM_FIX.md  FIX_LAZY_LOADING.md  FIX_LLM_CPU_ISSUE.md  GPU_OPTIMIZATION.md  IMPORT_PATH_FIX.md  QUERY_OOM_FIX.md  RERANKER_GPU_UPDATE.md
docs/guides/: MULTIFORMAT_GUIDE.md  PAGEINDEX_GEMINI_GUIDE.md  QUICKSTART_PageIndex.md  QUICK_REFERENCE.md  RAG_PRO_V1_VS_V2.md  RAG_PRO_V2_QUICKSTART.md  SPLIT_INDEX_QUERY_GUIDE.md  SUMMARY_MULTIFORMAT.md
education_ai/: app.py  engine.py  prompts.py  utils.py  validator.py
education_ai_v2/: README.md  app.py  engine_llm.py  prompts.py  rag_engine.py  utils.py
education_ai_v2/rag_data/: chunks.json  files.json
education_chatbot/: README.md  app.py  index.py  llm_engine.py  query.py  rag_engine.py
education_chatbot/storage/: chunks.json  files.json
llm_models/: Llama_3_1_8B_Instruct.py  Llama_3_1_8B_Instruct_v2.py  Qwen2.5_14B_Instruct.py  Qwen2.5_7B_Instruct.py  README.md
pageindex/: README_PageIndex.md  pageindex_core.py  pageindex_gemini.py  pageindex_llama_rag.py  pageindex_llama_rag_simple.py  pageindex_multiformat.py
rag_systems/: README.md
tests/: test.py  test_pdf_support.py  test_rag.py  test_rag_v2.py  test_rag_v3.py  test_rag_v4_lightrag.py  test_rag_v5_gemini_query.py  test_rag_v6_full_gemini.py  test_rag_v7_strict_local.py
(+111 files in other folders)
